# sapimo

./: .gitignore  LICENSE  pyproject.toml
src/sapimo/: README.jp.md  __main__.py  constants.py  exceptions.py  main.py  utils.py
src/sapimo/mock/: __init__.py  initialize.py  lambda_executer.py  mediator_route.py  mock_manager.py
src/sapimo/mock/executer/: invoke_info.py  lambda_invoker.py
src/sapimo/parser/: cdk_parser.py  cf_resource_parser.py  config_parser.py  fn_resolver.py  image_info.py  sam_parser.py
tests/unit/: test_image_info.py
